--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -39,8 +39,8 @@
 	--section-title-color: var(--color-black);
 }
 
-* {
-    box-sizing: border-box;
+*, *::before, *::after {
+	box-sizing: border-box;
 }
 
 html {
