--- a/CSS_advanced/styles/20-style.css
+++ b/CSS_advanced/styles/20-style.css
@@ -41,6 +41,7 @@
 	--section-footer-padding: 3rem 0 0;
 	--section-footer-align: center;
 	--footer-padding: 5rem 0 1rem;
+    --section-tagline-margin: 0;
 
 	/* Nav */
 	--nav-item-font-family: var(--font-family-title);
@@ -131,6 +132,7 @@ a:active {
 	font-family: var(--font-family-title);
 	text-transform: var(--section-tagline-transform);
 	font-weight: var(--font-weight-bold);
+	margin: var(--section-tagline-margin);
 }
 
 .container {
